--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <h1>Welcome to CoDe-chan!</h1>
+<h3>Hej Sofus</h3>
     {% for post in posts %}
     <div><p><b>{{ post.title }}</b> by <i>{{ post.user_name }}</i> <br />
         {{ post.body }}</p>
